# paneval-platform

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
deployments/: start.sh
deployments/docker/ssh-online-executor/: Dockerfile  paneval.conf  run.sh
deployments/logrotate.d/: supervisor
deployments/nginx/conf.d/: paneval.conf
deployments/supervisor/: supervisord.conf
deployments/supervisor/conf.d/: paneval-beat.ini  paneval-celery.ini  paneval.ini
docs/: paneval-api-interface-requirements.md  paneval-phase-i-evaluation-dataset-list.md
paneval/: __init__.py  asgi.py  celery.py  settings.py  storage.py  urls.py  util.py  validators.py  wsgi.py
paneval/apps/cem/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
paneval/apps/cem/migrations/: 0001_initial.py
paneval/apps/evaluation/: apps.py  executor.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
paneval/apps/user/: admin.py  apps.py  auth.py  caches.py  models.py  oidc.py  serializers.py  tests.py  urls.py  views.py
playbooks/: backend-setup.yml  backend-update.yml  conda-envs.yml  datasets.yml  docker-engnie.yml  docs.yml  frontend.yml
playbooks/tasks/: conda-pack-env.yml  frontend.yml
static/app/: .env.base  .env.dev  .env.pro  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
static/app/src/: App.vue  main.ts
static/docs/: .gitignore  README.md  package.json  pnpm-lock.yaml
(+93 files in other folders)
