[tool.poetry]
name = "panevalplat"
version = "0.1.0"
description = ""
authors = ["wanghui <wh_linux@126.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
django-redis = "^5.2.0"
mysqlclient = "^2.1.1"
celery = {extras = ["redis"], version = "^5.2.7"}
django-celery-results = "^2.5.0"
dataclasses-json = "^0.5.7"
djangorestframework-camel-case = "^1.4.2"
botocore = "^1.29.130"
boto3 = "^1.26.130"
pyjwt = "^2.7.0"
retry = "^0.9.2"
urllib3 = "<2"
sqids = "^0.4.1"
rich = "^13.7.0"
protobuf = "3.20"
aiohttp = "^3.9.5"
django-cors-headers = "^4.4.0"
oic = "^1.7.0"

[tool.poetry.group.dev.dependencies]
django-stubs = {version = "<4.2", extras = ["compatible-mypy"]}
celery-types = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "paneval.settings"